--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -6,7 +6,7 @@
   "SIGNUP": "Регистрация",
 
   "TAB1_TITLE": "Список",
-  "TAB2_TITLE": "Поиск",
+  "TAB2_TITLE": "Информация",
   "TAB3_TITLE": "Настройки",
 
   "MAP_TITLE": "Карта",
