--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -6,7 +6,7 @@
   "SIGNUP": "Реєстрація",
 
   "TAB1_TITLE": "Список",
-  "TAB2_TITLE": "Пошук",
+  "TAB2_TITLE": "інформація",
   "TAB3_TITLE": "Налаштування",
 
   "MAP_TITLE": "Мапа",
