--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -7,7 +7,7 @@
 
   "TAB1_TITLE": "Список",
   "TAB2_TITLE": "Информация",
-  "TAB3_TITLE": "Настройки",
+  "TAB3_TITLE": "Профиль",
 
   "MAP_TITLE": "Карта",
 
