--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -6,8 +6,8 @@
   "SIGNUP": "Реєстрація",
 
   "TAB1_TITLE": "Список",
-  "TAB2_TITLE": "інформація",
-  "TAB3_TITLE": "Налаштування",
+  "TAB2_TITLE": "Інформація",
+  "TAB3_TITLE": "Профіль",
 
   "MAP_TITLE": "Мапа",
 
